--- a/examples/gallery/demos/matplotlib/bachelors_degrees_by_gender.ipynb
+++ b/examples/gallery/demos/matplotlib/bachelors_degrees_by_gender.ipynb
@@ -37,11 +37,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from matplotlib.mlab import csv2rec\n",
     "from matplotlib.cbook import get_sample_data\n",
     "\n",
     "fname = get_sample_data('percent_bachelors_degrees_women_usa.csv')\n",
-    "gender_degree_data = csv2rec(fname)\n",
+    "gender_degree_data = pd.read_csv(fname)\n",
     "\n",
     "title = ('Percentage of Bachelor\\'s degrees conferred to women in '\n",
     "        'the U.S.A. by major (1970-2011)\\n')\n",
@@ -62,7 +61,7 @@
     "\n",
     "# Load the data into a dataframe and us pd.melt to unpivot the degree column\n",
     "df = pd.DataFrame(gender_degree_data)\n",
-    "df = pd.melt(df, id_vars='year', var_name='Degree', value_name='conferred')\n",
+    "df = pd.melt(df, id_vars='Year', var_name='Degree', value_name='conferred')\n",
     "df['Degree'] = [d.replace('_', ' ').title() for d in df.Degree]\n",
     "\n",
     "# Define a formatter that works for both bokeh and matplotlib\n",
@@ -77,14 +76,15 @@
     "\n",
     "# Define the dataset\n",
     "ds = hv.Dataset(df, vdims=vdim)\n",
-    "curves = ds.to(hv.Curve, 'year', groupby='Degree').overlay()\n",
+    "curves = ds.to(hv.Curve, 'Year', groupby='Degree').overlay()\n",
     "\n",
     "# Define a function to get the text annotations\n",
-    "max_year = ds['year'].max()\n",
-    "def get_labels():\n",
-    "     return hv.NdOverlay({deg: hv.Text(max_year, ds[max_year, deg]+y_offsets.get(deg, 0),\n",
-    "                                        deg, halign='left', fontsize=10).opts(style=dict(color=col))\n",
-    "                            for deg, col in zip(df.Degree.unique(), color_sequence)})"
+    "max_year = ds['Year'].max()\n",
+    "def offset(row):\n",
+    "    row['conferred'] += y_offsets.get(row.Degree, 0)\n",
+    "    return row\n",
+    "label_df = df[df.Year==max_year].apply(offset, axis=1)\n",
+    "labels = hv.Labels(label_df, ['Year', 'conferred'], 'Degree')"
    ]
   },
   {
@@ -113,14 +113,28 @@
     "                           aspect=0.7, show_legend=False, xticks=5, final_hooks=[cb], fig_size=350)\n",
     "options.Curve = hv.Options('style', color=hv.Cycle(values=color_sequence), linewidth=2)\n",
     "\n",
-    "(curves * get_labels()).relabel(title)"
+    "(curves.redim(Year=dict(range=(1970, 2011))) *\n",
+    " labels.options(color_index='Degree', cmap=color_sequence)).relabel(title)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
